fix TOI scale factor